cleoc/parser/src/parser/type_decl.rs
use chumsky::{IterParser, Parser, extra, input::ValueInput, prelude::just, span::SimpleSpan};
use lexer::TokenKind;

use crate::{
    errors::ParserError,
    parser::{
        fn_decl::{FnSignature, fn_signature},
        generic_params::{GenericParams, generic_params},
        ident::{Ident, ident},
        ptype::Type,
    },
    test_parser, type_parser,
};

#[derive(Debug, Clone, PartialEq)]
pub struct TypeDecl {
    pub name: Ident,
    pub generics: Option<GenericParams>,
    pub body: TypeBody,
}

#[derive(Debug, Clone, PartialEq)]
pub enum TypeBody {
    Struct(Vec<StructField>),
    Alias(Type),
    Trait(Vec<TraitMethod>),
    Enum(Vec<EnumVariant>),
}

#[derive(Debug, Clone, PartialEq)]
pub struct EnumVariant {
    pub name: Ident,
}

#[derive(Debug, Clone, PartialEq)]
pub struct StructField {
    pub name: Ident,
    pub field_type: Type,
}

#[derive(Debug, Clone, PartialEq)]
pub struct TraitMethod {
    pub signature: FnSignature,
}

pub fn type_decl<'tokens, 'src: 'tokens, I>()
-> impl Parser<'tokens, I, TypeDecl, extra::Err<ParserError<'tokens, 'src>>> + Clone
where
    I: ValueInput<'tokens, Token = TokenKind<'src>, Span = SimpleSpan>,
{
    let ptype = type_parser!();

    let struct_field = ident()
        .then_ignore(just(TokenKind::Colon))
        .then(ptype.clone())
        .map(|(name, field_type)| StructField { name, field_type });

    let struct_decl = just(TokenKind::Struct).ignore_then(
        struct_field
            .separated_by(just(TokenKind::Comma))
            .allow_trailing()
            .collect::<Vec<StructField>>()
            .delimited_by(just(TokenKind::LeftBrace), just(TokenKind::RightBrace)),
    );

    let enum_variant = ident().map(|name| EnumVariant { name });

    let enum_decl = just(TokenKind::Enum).ignore_then(
        enum_variant
            .separated_by(just(TokenKind::Comma))
            .allow_trailing()
            .collect::<Vec<EnumVariant>>()
            .delimited_by(just(TokenKind::LeftBrace), just(TokenKind::RightBrace)),
    );

    let trait_method = just(TokenKind::Fn)
        .ignore_then(fn_signature())
        .map(|signature| TraitMethod { signature });

    let trait_decl = just(TokenKind::Trait).ignore_then(
        trait_method
            .separated_by(just(TokenKind::Semicolon))
            .allow_trailing()
            .collect::<Vec<TraitMethod>>()
            .delimited_by(just(TokenKind::LeftBrace), just(TokenKind::RightBrace)),
    );

    let type_body = struct_decl
        .map(TypeBody::Struct)
        .or(trait_decl.map(TypeBody::Trait))
        .or(ptype.clone().map(TypeBody::Alias))
        .or(enum_decl.map(TypeBody::Enum));

    just(TokenKind::Type)
        .ignore_then(ident())
        .then(generic_params().or_not())
        .then_ignore(just(TokenKind::Equal))
        .then(type_body)
        .map(|((name, generics), body)| TypeDecl {
            name,
            generics,
            body,
        })
}

test_parser!(type_decl() => TypeDecl);

mod test {
    #[allow(unused_imports)]
    use crate::unwrap_or_report;

    #[test]
    fn test_enum() {
        use super::*;

        let source = r#"type Color = enum {
    Red,
    Green,
}"#;

        let result = test_parse(source);

        assert_eq!(
            unwrap_or_report!(result, source),
            TypeDecl {
                name: Ident::new("Color"),
                generics: None,
                body: TypeBody::Enum(vec![
                    EnumVariant {
                        name: Ident::new("Red"),
                    },
                    EnumVariant {
                        name: Ident::new("Green"),
                    },
                ],),
            }
        );
    }

    #[test]
    fn test_trait() {
        use super::*;
        use crate::parser::fn_decl::FnSignature;

        let source = r#"type Drawable = trait { 
    fn draw()
    fn size() i32
}"#;

        let result = test_parse(source);

        assert_eq!(
            unwrap_or_report!(result, source),
            TypeDecl {
                name: Ident::new("Drawable"),
                generics: None,
                body: TypeBody::Trait(vec![
                    TraitMethod {
                        signature: FnSignature {
                            name: Ident::new("draw"),
                            generics: Some(GenericParams(vec![])),
                            parameters: vec![],
                            return_type: None,
                        },
                    },
                    TraitMethod {
                        signature: FnSignature {
                            name: Ident::new("size"),
                            generics: Some(GenericParams(vec![])),
                            parameters: vec![],
                            return_type: Some(Type::Path(crate::parser::path::PathExpr {
                                segments: vec![crate::parser::path::Segment {
                                    name: Ident::new("i32"),
                                    generics: None,
                                },],
                            },)),
                        },
                    }
                ],),
            }
        );
    }

    #[test]
    fn test_alias() {
        use super::*;
        use crate::parser::path::{PathExpr, Segment};

        let source = r#"type Alias = Point[Int]"#;

        let result = test_parse(source);

        assert_eq!(
            unwrap_or_report!(result, source),
            TypeDecl {
                name: Ident::new("Alias"),
                generics: None,
                body: TypeBody::Alias(Type::Path(PathExpr {
                    segments: vec![Segment {
                        name: Ident::new("Point"),
                        generics: Some(vec![Type::Path(PathExpr {
                            segments: vec![Segment {
                                name: Ident::new("Int"),
                                generics: None,
                            },],
                        },),],),
                    },],
                },),),
            }
        );
    }

    #[test]
    fn test_struct() {
        use super::*;
        use crate::parser::{
            generic_params::GenericParam,
            path::{PathExpr, Segment},
        };

        let source = r#"type Point[T] = struct {
    x: Int,
    y: Int,
}"#;

        let result = test_parse(source);

        assert!(result.is_ok());

        assert_eq!(
            result.unwrap(),
            TypeDecl {
                name: Ident::new("Point"),
                generics: Some(GenericParams(vec![GenericParam {
                    name: Ident::new("T"),
                    bound: None,
                },],)),
                body: TypeBody::Struct(vec![
                    StructField {
                        name: Ident::new("x"),
                        field_type: Type::Path(PathExpr {
                            segments: vec![Segment {
                                name: Ident::new("Int"),
                                generics: None,
                            },],
                        },),
                    },
                    StructField {
                        name: Ident::new("y"),
                        field_type: Type::Path(PathExpr {
                            segments: vec![Segment {
                                name: Ident::new("Int"),
                                generics: None,
                            },],
                        },),
                    },
                ],),
            }
        );
    }
}
